# pytricks

./: LICENSE  README.md  function-argument-unpacking-in-python.py  in-place-value-swapping.py  is-vs-equal-operator.py  measure-execution-time-small-bits.py  mergins-two-dicts-with-a-single-expression.py  pyproject.toml  sort-a-python-dict-by-value.py
docs/: __repr__ vs __str__.md  avoid-version-conflicts-virtual-environments.md  faulthandler.md  for-and-while-loops-can-have-an-else-branch.md  forced-keyword-only-parameters-in-python.md  globals-locals.md  list-comprehensions.md  python-built-in-http-server.md  unicode-variable-names.md
easter-eggs/: antigravity.md
scripts/: accessing-class-function-names-at-runtime.py  check-if-all-elements-in-a-list-are-equal.py  classmethod-vs-staticmethod-vs-plain.py  contextlib-suppress.py  dict-emulate-switch-case.py  functions-are-first-class-citizens.py  generates-permutations.py  get-method-default-arg.py  issubclass-built-in.py  json-dumps-to-pretty-print-python-dicts.py  lambda-functions.py  list-slice-without-indices.py  most-common-elements-in-iterable.py  multiple-sets-of-kwargs-in-python.py  namedtuples-alternative-to-defining-a-class-manually.py  peeking-behind-bytecode-curtain.py  working-with-IP-addresses-in-python-3.py
